fix in animate-scroll setting

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <footer class="page-footer black footer" id="contact">
         <div class="container">
             <div class="row">
-                <div class="col l4 s12 m6 footer__contact" data-aos="fade-right" data-aos-duration="500">
+                <div class="col l4 s12 m6 footer__contact" data-aos="zoom-in" data-aos-duration="500">
                     <h5 class="white-text">Kontakt</h5>
                     <p class="grey-text text-lighten-4">ul. Obszerna 59</p>
                     <p class="grey-text text-lighten-4">93-124 Łódź</p>
@@ -320,7 +320,7 @@
                         </a>
                     </p>
                 </div>
-                <div class="col l4 offset-l2 offset-m0 s12 m6 footer__hours" data-aos="fade-left" data-aos-duration="500">
+                <div class="col l4 offset-l2 offset-m0 s12 m6 footer__hours" data-aos="zoom-in" data-aos-duration="500">
                     <h5 class="white-text footer__hours">Godziny pracy</h5>
                     <div class="row">
                         <div class="col l5 m4 s6">Poniedziałek</div>
