--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="row about__services">
-                <div class="col s12 m4 l4" data-aos="zoom-in" data-aos-duration="500">
+                <div class="col s12 m4 l4 about__services--wrapper" data-aos="zoom-in" data-aos-duration="500">
                     <div class="center">
                         <i class="large material-icons">directions_car</i>
                         <p class="about__services--title">Wulkanizacja</p>
@@ -100,7 +100,7 @@
                                     <p class="light center">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                         ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                         ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                    <i class="medium material-icons more_info">more_horiz</i>
+                                    <a class="waves-effect waves-light btn more_info">Więcej</a>
                                 </li>
                                 <li class="left-align hide slides about__services--more">
                                     <div class="row">
@@ -136,10 +136,8 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col s4">
-                                            <i class="small material-icons right more_close">close</i>
-                                        </div>
-                                        <div class="col s8">
+                                        <div class="col s12 center">
+                                            <a class="red waves-effect waves-light btn more_close">Zamknij</a>
                                         </div>
                                     </div>
                                 </li>
@@ -147,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m4 l4" data-aos="zoom-in" data-aos-duration="500">
+                <div class="col s12 m4 l4 about__services--wrapper" data-aos="zoom-in" data-aos-duration="500">
                     <div class="center">
                         <i class="large material-icons">build</i>
                         <p class="about__services--title">Serwis</p>
@@ -158,7 +156,7 @@
                                         ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                         ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                     </p>
-                                     <i class="medium material-icons more_info">more_horiz</i>
+                                    <a class="waves-effect waves-light btn more_info">Więcej</a>
                                 </li>
                                 <li class="left-align hide slides about__services--more">
                                     <div class="row">
@@ -210,10 +208,8 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col s4">
-                                            <i class="small material-icons right more_close">close</i>
-                                        </div>
-                                        <div class="col s8">
+                                        <div class="col s12 center">
+                                            <a class="red waves-effect waves-light btn more_close">Zamknij</a>
                                         </div>
                                     </div>
                                 </li>
@@ -221,7 +217,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m4 l4" data-aos="zoom-in" data-aos-duration="500">
+                <div class="col s12 m4 l4 about__services--wrapper" data-aos="zoom-in" data-aos-duration="500">
                     <div class="center">
                         <i class="large material-icons">ac_unit</i>
                         <p class="about__services--title">Klimatyzacja</p>
@@ -232,7 +228,7 @@
                                         ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                         ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                     </p>
-                                     <i class="medium material-icons more_info">more_horiz</i>
+                                    <a class="waves-effect waves-light btn more_info">Więcej</a>
                                 </li>
                                 <li class="left-align hide slides about__services--more">
                                     <div class="row">
@@ -244,10 +240,8 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col s4">
-                                            <i class="small material-icons right more_close">close</i>
-                                        </div>
-                                        <div class="col s8">
+                                        <div class="col s12 center">
+                                            <a class="red waves-effect waves-light btn more_close">Zamknij</a>
                                         </div>
                                     </div>
                                 </li>
