--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         </div>
     </header>
 
-    <section class="yellow darken-4 about" id="about">
+    <div id="about" class="yellow darken-4"></div>
+    <section class="yellow darken-4 about">
         <div class="container">
             <div class="row center about__header" data-aos="zoom-in" data-aos-duration="500">
                 <h3 class="about__header--title">A&S SERWIS
@@ -253,7 +254,8 @@
         </div>
     </section>
 
-    <section class="gallery black" id="gallery">
+    <div id="gallery" class="yellow darken-4"></div>
+    <section class="gallery black">
         <div class="container gallery__wrapper flexslider_image flexslider transparent">
             <div class="gallery__indicator">
                 <a href="" class="gallery__indicator--direction gallery__indicator--direction-left waves-effect waves-light">
@@ -288,17 +290,18 @@
                 </a>
             </div>
         </div>
-        <div id="modal1" class="modal gallery__carousel--modal">
+        <!-- <div id="modal1" class="modal gallery__carousel--modal">
             <i class="white-text modal-close waves-effect waves-green btn-fla medium material-icons right">close</i>
-        </div>
+        </div> -->
     </section>
 
     <section class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2472.0770794493133!2d19.473037532671636!3d51.713332338830426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x61f777d4f7aabc86!2sA%26S+SERWIS+S.C.Wymiana+Opon%2C+serwis+opon%2Cwulkanizacja+Marcin+Adamek+Krzysztof+Skura!5e0!3m2!1spl!2spl!4v1527489475315"
+        <iframe data-aos="zoom-in" data-aos-duration="500" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2472.0770794493133!2d19.473037532671636!3d51.713332338830426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x61f777d4f7aabc86!2sA%26S+SERWIS+S.C.Wymiana+Opon%2C+serwis+opon%2Cwulkanizacja+Marcin+Adamek+Krzysztof+Skura!5e0!3m2!1spl!2spl!4v1527489475315"
             width="100%" height="700px" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 
-    <footer class="page-footer black footer" id="contact">
+    <div id="contact" class="black"></div>
+    <footer class="page-footer black footer">
         <div class="container">
             <div class="row">
                 <div class="col l4 s12 m6 footer__contact" data-aos="zoom-in" data-aos-duration="500">
