correct for the responsiveness of the gallery

--- a/index.html
+++ b/index.html
@@ -264,23 +264,23 @@
             </div>
             <ul class="gallery__slides slides" data-aos="zoom-in" data-aos-duration="500">
                 <li>
-                    <a class="gallery__slides--image modal-trigger" href="#modal1">
-                        <img src="http://lh3.googleusercontent.com/--Eo4Pcyx9Pg41gpI8XoeLz5rhWeVBep2NFrK2IMw3hiUyecSShP6-vp5DAwS-at7busXB1B=w1024-h768-n-no-v1">
+                    <a class="gallery__slides--link modal-trigger" href="#modal1">
+                        <img class="gallery__slides--link-image responsive-img" src="http://lh3.googleusercontent.com/--Eo4Pcyx9Pg41gpI8XoeLz5rhWeVBep2NFrK2IMw3hiUyecSShP6-vp5DAwS-at7busXB1B=w2000-h2000-n-no-v1">
                     </a>
                 </li>
                 <li>
-                    <a class="gallery__slides--image modal-trigger" href="#modal1">
-                        <img src="http://lh3.googleusercontent.com/oGgpVUxYrDHPvKNDT0aJ7b3PBCX6KSqQ0zx76HGcB-OErL65gFMRPNnE6tZYlEsPl8c2tb7A=w1024-h768-n-no-v1">
+                    <a class="gallery__slides--link modal-trigger" href="#modal1">
+                        <img class="gallery__slides--link-image responsive-img" src="http://lh3.googleusercontent.com/oGgpVUxYrDHPvKNDT0aJ7b3PBCX6KSqQ0zx76HGcB-OErL65gFMRPNnE6tZYlEsPl8c2tb7A=w2000-h2000-n-no-v1">
                     </a>
                 </li>
                 <li>
-                    <a class="gallery__slides--image modal-trigger" href="#modal1">
-                        <img src="http://lh3.googleusercontent.com/-3d34J3HxcrjXHal9iBZK25BzeQs_oe4G-OxGtbThq5Afkf6VLjn-HbRionyzD3DjLcOu7XJ=w1024-h768-n-no-v1">
+                    <a class="gallery__slides--link modal-trigger" href="#modal1">
+                        <img class="gallery__slides--link-image responsive-img" src="http://lh3.googleusercontent.com/-3d34J3HxcrjXHal9iBZK25BzeQs_oe4G-OxGtbThq5Afkf6VLjn-HbRionyzD3DjLcOu7XJ=w2000-h2000-n-no-v1">
                     </a>
                 </li>
                 <li>
-                    <a class="gallery__slides--image modal-trigger" href="#modal1">
-                        <img src="http://lh3.googleusercontent.com/BIzkhz3DYQ_mbdzIfE7x352C4kjyIAvaRLmbLwQzm0-zzYWBfe6GOtg4GoiBgLsvm5aTCul3=w1024-h768-n-no-v1">
+                    <a class="gallery__slides--link modal-trigger" href="#modal1">
+                        <img class="gallery__slides--link-image responsive-img" src="http://lh3.googleusercontent.com/BIzkhz3DYQ_mbdzIfE7x352C4kjyIAvaRLmbLwQzm0-zzYWBfe6GOtg4GoiBgLsvm5aTCul3=w2000-h2000-n-no-v1">
                     </a>
                 </li>
             </ul>
