add fix to nav and about section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body id="home">
     <div class="navbar-fixed">
-        <nav class="yellow darken-3">
+        <nav id="nav" class="nav">
             <div class="nav-wrapper">
                 <a href="#!" class="brand-logo">Logo</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger">
@@ -23,37 +23,37 @@
                 </a>
                 <ul class="right hide-on-med-and-down">
                     <li>
-                        <a class="black-text nav__link" href="#home">Strona Główna</a>
+                        <a class="nav__link" href="#home">Strona Główna</a>
                     </li>
                     <li>
-                        <a class="black-text nav__link" href="#about">O nas</a>
+                        <a class="nav__link" href="#about">O nas</a>
                     </li>
                     <li>
-                        <a class="black-text nav__link" href="#gallery">Galeria</a>
+                        <a class="nav__link" href="#gallery">Galeria</a>
                     </li>
                     <li>
-                        <a class="black-text nav__link" href="#contact">Kontakt</a>
+                        <a class="nav__link" href="#contact">Kontakt</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </div>
 
-    <ul class="sidenav yellow darken-3" id="mobile-demo">
+    <ul class="sidenav black" id="mobile-demo">
         <li>
             <img src="http://via.placeholder.com/300x56?text=Logo">
         </li>
         <li>
-            <a href="#home" class="mobile__link">Strona Główna</a>
+            <a href="#home" class="white-text mobile__link">Strona Główna</a>
         </li>
         <li>
-            <a href="#about" class="mobile__link">O nas</a>
+            <a href="#about" class="white-text mobile__link">O nas</a>
         </li>
         <li>
-            <a href="#gallery" class="mobile__link">Galeria</a>
+            <a href="#gallery" class="white-text mobile__link">Galeria</a>
         </li>
         <li>
-            <a href="#contact" class="mobile__link">Kontakt</a>
+            <a href="#contact" class="white-text mobile__link">Kontakt</a>
         </li>
     </ul>
 
@@ -296,7 +296,7 @@
     </section>
 
     <section class="map">
-        <iframe data-aos="zoom-in" data-aos-duration="500" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2472.0770794493133!2d19.473037532671636!3d51.713332338830426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x61f777d4f7aabc86!2sA%26S+SERWIS+S.C.Wymiana+Opon%2C+serwis+opon%2Cwulkanizacja+Marcin+Adamek+Krzysztof+Skura!5e0!3m2!1spl!2spl!4v1527489475315"
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2472.0770794493133!2d19.473037532671636!3d51.713332338830426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x61f777d4f7aabc86!2sA%26S+SERWIS+S.C.Wymiana+Opon%2C+serwis+opon%2Cwulkanizacja+Marcin+Adamek+Krzysztof+Skura!5e0!3m2!1spl!2spl!4v1527489475315"
             width="100%" height="700px" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 
