--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body id="home">
     <div class="navbar-fixed">
-        <nav id="nav" class="nav">
+        <nav class="nav">
             <div class="nav-wrapper">
                 <a href="#!" class="brand-logo">Logo</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger">
@@ -78,8 +78,8 @@
         </div>
     </header>
 
-    <div id="about" class="yellow darken-4"></div>
-    <section class="yellow darken-4 about">
+    <div id="about"></div>
+    <section class="about orange darken-4">
         <div class="container">
             <div class="row center about__header" data-aos="zoom-in" data-aos-duration="500">
                 <h3 class="about__header--title">A&S SERWIS
@@ -254,7 +254,7 @@
         </div>
     </section>
 
-    <div id="gallery" class="yellow darken-4"></div>
+    <div id="gallery"></div>
     <section class="gallery black">
         <div class="container gallery__wrapper flexslider_image flexslider transparent">
             <div class="gallery__indicator">
@@ -295,6 +295,7 @@
         </div> -->
     </section>
 
+    <div id="map"></div>
     <section class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2472.0770794493133!2d19.473037532671636!3d51.713332338830426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x61f777d4f7aabc86!2sA%26S+SERWIS+S.C.Wymiana+Opon%2C+serwis+opon%2Cwulkanizacja+Marcin+Adamek+Krzysztof+Skura!5e0!3m2!1spl!2spl!4v1527489475315"
             width="100%" height="700px" frameborder="0" style="border:0" allowfullscreen></iframe>
