--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                         <a class="nav__link" href="#gallery">Galeria</a>
                     </li>
                     <li>
+                        <a class="nav__link" href="https://www.oponeo.pl/serwis-samochodowy/lodz/a-s-serwis-s-c-marcin-adamek-krzysztof-skura-4019">Cennik</a>
+                    </li>
+                    <li>
                         <a class="nav__link" href="#contact">Kontakt</a>
                     </li>
                 </ul>
@@ -51,6 +54,9 @@
         </li>
         <li>
             <a href="#gallery" class="white-text mobile__link">Galeria</a>
+        </li>
+        <li>
+            <a class="nav__link" href="https://www.oponeo.pl/serwis-samochodowy/lodz/a-s-serwis-s-c-marcin-adamek-krzysztof-skura-4019">Cennik</a>
         </li>
         <li>
             <a href="#contact" class="white-text mobile__link">Kontakt</a>
@@ -295,7 +301,6 @@
         </div> -->
     </section>
 
-    <div id="map"></div>
     <section class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2472.0770794493133!2d19.473037532671636!3d51.713332338830426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x61f777d4f7aabc86!2sA%26S+SERWIS+S.C.Wymiana+Opon%2C+serwis+opon%2Cwulkanizacja+Marcin+Adamek+Krzysztof+Skura!5e0!3m2!1spl!2spl!4v1527489475315"
             width="100%" height="700px" frameborder="0" style="border:0" allowfullscreen></iframe>
