change in mobile link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a href="#gallery" class="white-text mobile__link">Galeria</a>
         </li>
         <li>
-            <a class="nav__link" href="https://www.oponeo.pl/serwis-samochodowy/lodz/a-s-serwis-s-c-marcin-adamek-krzysztof-skura-4019">Cennik</a>
+            <a href="https://www.oponeo.pl/serwis-samochodowy/lodz/a-s-serwis-s-c-marcin-adamek-krzysztof-skura-4019" class="white-text mobile__link">Cennik</a>
         </li>
         <li>
             <a href="#contact" class="white-text mobile__link">Kontakt</a>
